--- a/style.css
+++ b/style.css
@@ -1,21 +1,40 @@
-*{
-margin: 0;
-padding: 0;
-}
+<!DOCTYPE html>
+<html lang="pt-br">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Página principal</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <header class="cabecalho">
+            <img  class="cabecalho-imagem"  src="img/alurastart.png" alt="logo AluraStart">
 
+            <ul class="cabecalho-lista"  >
+                <li class="cabecalho-lista-item" >Escola</li>
+                <li class="cabecalho-lista-item" >Estudantes</li>
+            </ul>
 
+       </header>
+        
+        <section class="escola">
+          <div class="escola-div-conteudo">
+            <h2 class="escola-titulo">Sobre a Escola</h2>
+            <p class="escola-texto-um">A Escola Alura foi fundada em 2010 e tem como objetivo ensinar Pensamento Computacional, atráves da Programaçaõ</p>
+            <p class="escola-texto-dois">A turma mais estudiosa e famosa é a segunda série, turma E. Nós somos super unidos e a turma favorita por todos os professores que nos ajudam!</p>
+            
+          </div>
+        <img src="img/Book lover-bro.svg''imagem da escola" alt="" class="escola-imagem">
+        
+        </section>
+        
+        <section class="estudante">
+            <h2 class="estudante-titulo">quem sou</h2>
+            <img src="img/yasmin.jpg" alt="foto da yasmin" class="estudante-imagem">
+        </section>
+        
+        <h1>Yasmin Correia</h1>
 
-
-
-
-
-header {
-    background-color: #424E61;
-    color: white;
-}
-
-.cabecalho-lista-item{
-display: inline-block;
-margin: 0% 16px;
-font-size: 24px;
-}
+       
+    </body>
+</html>
